[package]
name = "multiple-txn-example"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
openrpc-testgen = { git = "https://github.com/neotheprogramist/starknet-hive.git", rev = "994d2e8b5e3d678c24f7fee320271f1c94abfe83" }
serde_json = "1.0.138"
starknet-types-rpc = { git = "https://github.com/neotheprogramist/types-rs.git", rev = "3ee4325a72481e526b7c4fa0592ad822a391658b" }
tokio = { version = "1.43.0", features = [
    "macros",
    "time",
    "full",
    "rt-multi-thread",
] }
starknet-types-core = { version = "0.1.6", default-features = false, features = [
    "hash",
    "curve",
] }
starknet = "0.12.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
